<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".presentation.PayPalConfirm">


    <View
        android:id="@+id/horizonLine"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="#DDDDDD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_paypal" />

    <ImageView
        android:id="@+id/logo_paypal"
        android:layout_width="151dp"
        android:layout_height="66dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="244dp"
        android:layout_marginRight="244dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/paypalLogo"
        app:layout_constraintBottom_toTopOf="@+id/horizonLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/paypal_logo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="500dp"
        android:background="#F1FAFF"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizonLine">

        <ImageView
            android:id="@+id/checkImg"
            android:layout_width="100dp"
            android:layout_height="91dp"
            android:layout_marginStart="150dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="150dp"
            android:layout_marginRight="150dp"
            android:contentDescription="@string/checkImg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/check" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/confirmMsg"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnDone"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:gravity="center"
            android:onClick="goHomePage"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/done"
            android:textAllCaps="false"
            android:textColor="#000000"
            app:backgroundTint="#C3D4DF"
            app:rippleColor="#E3E3E3" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>